--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
       <label for="password">password</label>
         <input type="password" required [(ngModel)]="password" name="password">
       <label for="password">password</label>
-      <button class="btn btn-success" (click)="Login()">Login</button>
+      <button class="btn btn-success" (click)="login()">Login</button>
     </form>
   </div>
 </div>
