--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,10 +2,10 @@
     <div class="row">
       <h2>SignUp</h2>
       <form>
-        <label for="name">name</label>
-        <input  required [(ngModel)]="name" name="name">
-        <label for="username">Username</label>
-        <input  required [(ngModel)]="username" name="username">
+        <!-- <label for="name">name</label
+        <input  required [(ngModel)]="name" name="name"> -->
+        <!-- <label for="username">Username</label>
+        <input  required [(ngModel)]="username" name="username"> -->
         <label for="email">email</label>
         <input  required [(ngModel)]="email" name="email">
         <label for="password">password</label>
