--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,4 +1,14 @@
-*{
-    padding: 10px;
-    margin: 5px;
+.cw{
+    width:250px;
+    margin: 10px 0;    
+}
+
+.box{
+    display: flex;
+    flex-wrap: wrap;
+    gap:10px;
+}
+
+button{
+    margin-right: 10px;
 }
