--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,15 +5,25 @@
       <button class="btn btn-primary">Home</button>
       <button class="btn btn-primary">My blogs</button>
       <button class="btn btn-primary">Profile</button>
+      <button class="btn btn-primary" (click)="addBlog()">Add Blog</button>
 
-      <div class="card" style="width:100%;">
-        <div class="card-body" *ngIf="isEditable == false">
-          <p>{{textData}}</p>
-          <button class="btn btn-danger" (click)="editCard()">Edit</button>
+      <div class="card" style="width:100%;" *ngIf="isAddblog == true">
+        <h4>New Blog</h4>
+        <div class="card-body">
+          <textarea rows="7" [(ngModel)]="blogdata" name="blogdata"></textarea>
+          <button class="btn btn-danger" (click)="saveBlog()">Save</button>
         </div>
-        <div class="card-body" *ngIf="isEditable == true">
-          <textarea rows="7" [(ngModel)]="textData" name="textData"></textarea>
-          <button class="btn btn-danger" (click)="saveCard()">Save</button>
+      </div>
+      <div class="box">
+        <div class="card cw" *ngFor="let key of cardData">
+          <div class="card-body" *ngIf="key.isEditable == false">
+            <p>{{key.content}}</p>
+            <button class="btn btn-danger" (click)="editCard(key.content_id)">Edit</button>
+          </div>
+          <div class="card-body" *ngIf="key.isEditable == true">
+            <textarea rows="7" [(ngModel)]="key.content" name="key.content"></textarea>
+            <button class="btn btn-danger" (click)="saveCard(key.content_id)">Save</button>
+          </div>
         </div>
       </div>
 
