--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,32 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>Home-page</h2>
+      <h2>Home Page</h2>
+      <p *ngIf="user_id !== ''">Logged as {{user_id}}</p>
+      <p *ngIf="user_id === ''">No user logged In</p>
+
       <button class="btn btn-primary">Home</button>
-      <button class="btn btn-primary">My blogs</button>
-      <button class="btn btn-primary">Profile</button>
-      <button class="btn btn-primary" (click)="addBlog()">Add Blog</button>
-
-      <div class="card" style="width:100%;" *ngIf="isAddblog == true">
-        <h4>New Blog</h4>
-        <div class="card-body">
-          <textarea rows="7" [(ngModel)]="blogdata" name="blogdata"></textarea>
-          <button class="btn btn-danger" (click)="saveBlog()">Save</button>
-        </div>
-      </div>
-      <div class="box">
-        <div class="card cw" *ngFor="let key of cardData">
-          <div class="card-body" *ngIf="key.isEditable == false">
-            <p>{{key.content}}</p>
-            <button class="btn btn-danger" (click)="editCard(key.content_id)">Edit</button>
-          </div>
-          <div class="card-body" *ngIf="key.isEditable == true">
-            <textarea rows="7" [(ngModel)]="key.content" name="key.content"></textarea>
-            <button class="btn btn-danger" (click)="saveCard(key.content_id)">Save</button>
-          </div>
-        </div>
-      </div>
-
+      <button class="btn btn-primary" (click)="goToPage('blog-page')" >My blogs</button>
+      <button class="btn btn-primary" (click)="goToPage('profile')">Profile</button>
     </div>
   </div>
 </div>
