--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,5 @@
 button{
     margin-top: 1rem;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
