--- a/src/app/blog/blogpage/blogpage.component.html
+++ b/src/app/blog/blogpage/blogpage.component.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Blog Page</h2>
+      <!-- <a href="">Home</a> -->
       <button class="btn btn-primary" (click)="goToPage('home-page')">Home</button>
       <button class="btn btn-primary" (click)="isAddblog = true">Add Blog</button>
-
-      <div class="card" style="width:100%;margin-top: 1rem;" *ngIf="isAddblog == true">
+        <div class="card" style="width:100%;margin-top: 1rem;" *ngIf="isAddblog == true">
         <h4>Create a new blog</h4>
         <div class="card-body">
           <div class="custom-control custom-switch">
