--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Home Page</h2>
-      <p *ngIf="user_id !== ''">Logged as {{user_id}}</p>
-      <p *ngIf="user_id === ''">No user logged In</p>
-
+      <p *ngIf="attribute != null">Logged as {{attribute}}</p>
+      <p *ngIf="attribute == null">No user logged In</p>
+     
       <button class="btn btn-primary">Home</button>
       <button class="btn btn-primary" (click)="openDialog()" >My blogs</button>
       <button class="btn btn-primary" (click)="openDialogProfile()">Profile</button>
