--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,23 +2,19 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Home Page</h2>
-      <p *ngIf="attribute != null">Logged as {{attribute}}</p>
-      <p *ngIf="attribute == null">No user logged In</p>
-     
+      <p *ngIf="isUserLogged === true">Logged as {{user_id}}</p>
+      <p *ngIf="isUserLogged === false">No user logged In</p>
       <button class="btn btn-primary">Home</button>
       <button class="btn btn-primary" (click)="openDialog()" >My blogs</button>
       <button class="btn btn-primary" (click)="openDialogProfile()">Profile</button>
       <button class="btn btn-primary" (click)="logout()" >Logout</button>
-
       <div class="box">
         <div class="card cw" *ngFor="let key of allBlogs">
           <div class="card-body">
             <p>{{key.content}}</p>
            </div>
-         
-        </div>
+         </div>
       </div>
-     
-    </div>
+     </div>
   </div>
 </div>
