--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
       <button class="btn btn-primary">Home</button>
       <button class="btn btn-primary" (click)="openDialog()" >My blogs</button>
       <button class="btn btn-primary" (click)="openDialogProfile()">Profile</button>
-      <button class="btn btn-primary" (click)="logout()" >Logout</button>
+      <button *ngIf="isUserLogged===true" class="btn btn-primary" (click)="logout()" >Logout</button>
       <div class="box">
         <div class="card cw" *ngFor="let key of allBlogs">
           <div class="card-body">
