--- a/src/app/blog/blogpage/blogpage.component.html
+++ b/src/app/blog/blogpage/blogpage.component.html
@@ -17,11 +17,15 @@
       </div>
       <div class="box">
         <div class="card cw" *ngFor="let key of allBlogs">
-          <div class="card-body" *ngIf="key.status == 'inactive'">
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" (change)="toggleCard(key.id)" [(ngModel)]="key.isActive" name="key.isActive" id="{{key.id}}">
+            <label class="custom-control-label" for="{{key.id}}">{{key.status}}</label>
+          </div>
+          <div class="card-body" *ngIf="key.isEditable == false">
             <p>{{key.content}}</p>
             <button class="btn btn-danger" (click)="editCard(key.id)">Edit</button>
           </div>
-          <div class="card-body" *ngIf="key.status == 'active'">
+          <div class="card-body" *ngIf="key.isEditable == true ">
             <textarea rows="7" [(ngModel)]="key.content" name="key.content"></textarea>
             <button class="btn btn-danger" (click)="saveCard(key.id)">Update</button>
           </div>
